fixed some bugs like resizing issues, changed styling, fixed coloring algorithm as best I can, added a readout. I know... its too much for one commit, but here we are alright?

--- a/index.css
+++ b/index.css
@@ -29,6 +29,14 @@ canvas {
   width: 100%;
 }
 
+.info {
+  font-size: medium;
+}
+
+.dark {
+  color: lightgray;
+}
+
 #display-container {
   position: relative;
 }
